# smart-memory-client

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PACKAGE_SETUP_COMPLETE.md  README.md  SSG_UPDATE.md  pyproject.toml  pyrightconfig.json  setup.py  verify_client.py
.claude/: templates.json
.claude/commands/: commit.md  debug.md  document.md  review.md  security-review.md  test.md
.claude/rules/: api-design.md  code-quality.md  dependencies.md  documentation.md  error-coverage.md  error-handling.md  git-workflow.md  patterns.md  security.md  style.md  testing.md
.github/workflows/: publish.yml  test.yml
scripts/: sync_from_service.sh
smartmemory_client/: __init__.py  client.py
smartmemory_client/models/: __init__.py  conversation.py  memory_item.py
tests/: __init__.py  conftest.py  test_client.py  test_client_errors.py  test_client_full_coverage.py  test_code_search.py  test_decision_methods.py  test_procedure_candidates.py  test_procedure_drift.py  test_procedure_evolution.py  test_procedure_matches.py  test_procedures.py  test_relation_contract.py  test_summary_client.py  test_token_usage.py
tests/integration/: __init__.py  conftest.py  test_crud_golden.py  test_graph_operations.py
tests/unit/: test_get_working_context_client.py
