[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmemory-client"
dynamic = ["version"]
description = "Python client for SmartMemory Service API"
readme = "README.md"
authors = [
    {name = "SmartMemory Team", email = "team@smartmemory.dev"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["smartmemory", "memory", "ai", "knowledge-graph", "semantic-memory"]
dependencies = [
    "httpx>=0.20.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.287",
]

[project.urls]
Homepage = "https://github.com/smartmemory/smart-memory-client"
Documentation = "https://docs.smartmemory.dev"
Repository = "https://github.com/smartmemory/smart-memory-client"
Issues = "https://github.com/smartmemory/smart-memory-client/issues"
Changelog = "https://github.com/smartmemory/smart-memory-client/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["smartmemory_client*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=smartmemory_client --cov-report=term-missing"
